remaining fixes (compile and forbiddenAPIs) after merge from upstream branch_9x (#118)
* fix remaining compile errors after merge
* fix forbiddenAPIs after merge